7 Jan 2018
remove: forums link
remove: forums
update: use of dirname
update: announce.php
revert: changes to imdb class
fix: typo in lang files

6 Jan 2018
fix: global block uploadapp.php
fix: uploadapp.php
move: jquery to local file
replace: many relative urls with full url

5 Jan 2108
fix: login bug

4 Jan 2018
remove: ipToStorageFormat function
fix: admin/bans.php
fix: first user status pending
add: error message for pending users attempting to login

2 Jan 2018
update: README
remove: trivia questions to separate sql install
update: trivia to not refresh when game closed
replace: getting server's webroot with getting root from script
add: set the 3 passwords to random generated password in config during install
remove: news delete \n
fix: margin on index page last news item
remove: unused js files
fix: AJAX Chat anonimize url without bbcode

1 Jan 2018
add: missing month in AJAX Chat
fix: function call Christmas
add: checkdate for Christmas Gift
fix: lang not loaded in achievements cleanup

31 Dec 2017
fix: AJAX Chat dateTime insert
add: datetime for mysql
update: re-order sql updates
update: database updates
update: CACHE class
update: database updates
update: install scripts
fix: invite signup
fix: signup confirm
update: many additional edits
update: sql files

16 Dec 2017
add: read from .env file
update: installer to check composer and npm
update: split install.php.sql into schema.php.sql and data.php.sql
update: pStrength.jquery.js
fix: autologin on successful account creation

10 Dec 2017
fix: index trivia block display slightly different than all the others
add: add bbcode for [p]
removed: unneeded css/js/gz files

9 Dec 2017
add: missing required file
update: general code cleanup
update: allow notifications to use bbcode
fix: wiki.php
fix: users.php
update: forums sort links to tabs
fix: navbar username class color
add: mini navbar for links in usercp.php, userdetails.php forums.php
remove: text shadow from user classes
remove: webpack dependancy