@@ -197,7 +197,7 @@ $site_config['report_alert'] = 1; // saves a query when off
 $site_config['staffmsg_alert'] = 1; // saves a query when off
 $site_config['uploadapp_alert'] = 1; // saves a query when off
 $site_config['bug_alert'] = 1; // saves a query when off
-$site_config['pic_base_url'] = $site_config['pic_base_url'] . '';
+$site_config['pic_base_url'] = $site_config['baseurl'] . DIRECTORY_SEPARATOR . 'images' . DIRECTORY_SEPARATOR;
 $site_config['stylesheet'] = 1;
 $site_config['categorie_icon'] = 1;
 $site_config['comment_min_class'] = 4; //minim class to be checked when posting comments
