@@ -1,4 +1,5 @@
 7 Jan 2018
+update: config.php
 remove: forums link
 remove: forums
 update: use of dirname
